--- a/Himanshu/web/requirements.txt
+++ b/Himanshu/web/requirements.txt
@@ -8,6 +8,7 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.6
+django-resized==0.3.11
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
@@ -17,6 +18,7 @@ numpy==1.20.0
 opencv-python==4.5.1.48
 packaging==20.3
 pep517==0.8.2
+Pillow==8.1.0
 progress==1.5
 pyparsing==2.4.6
 pytoml==0.1.21
